HttpUnit release notes

Known problems:
    1. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include document.write and some DOM properties


Revision History:
13-Oct-2002
Notes:
    1. The NekoHTML parser is now supported. If it is present in the classpath, it will be used in preference to JTidy.
       Note that NekoHTML is a much more forgiving parser than JTidy, properly handling a lot of bad HTML that JTidy
       cannot. In addition, the Document class that NekoHTML creates is of type HTMLDocument. On the other hand,
       the HTMLErrorListener is not currently supporting the NekoHTML parser, although such support will be added if
       it is really needed.  NekoHTML is the current preferred parser and will probably be required to support certain
       JavaScript enhancements. Ultimately, it is possible that JTidy support will be dropped.
    2. The version of xerces now included in the distribution is 2.2, which is required for NekoHTML.

12-Oct-2002
Acknowledgements:
    Thanks to Richard Harris for finding a case where the handling of JavaScript comments was not working.

Problems fixed:
    1. Under certain circumstances, the first line of a JavaScript section was being treated as though commented out.

10-Oct-2002
Problems fixed:
    1. Window.open was implemented with parameters backwards in 8-Oct-2002 build
    2. Window.opener property was not returning undefined value for non-top-level windows in 8-Oct-2002 build

Additions:
    1. Added support for Window.parent
    2. Added support for Window.<subframe-name>
    3. Added WebWindow.getOpenedWindow() to return a window by its name.
    4. You may now close a window by calling window.close(). This will trigger any active listeners. If the window closed